--- a/src/components/screenboardComponents/Screenboard.css
+++ b/src/components/screenboardComponents/Screenboard.css
@@ -1,36 +1,36 @@
-#whiteboardCanvas {
+#screenboard-interface #whiteboardCanvas {
   border: 1px solid #000;
   cursor: crosshair;
   background-color: white;
 }
 
-.resize-handle,
-.move-handle {
+#screenboard-interface .resize-handle,
+#screenboard-interface .move-handle {
   width: 8px;
   height: 8px;
   background: red;
   position: absolute;
 }
 
-.move-handle {
+#screenboard-interface .move-handle {
   background: blue;
 }
 
-#textInput {
+#screenboard-interface #textInput {
   display: none;
   position: absolute;
   z-index: 10;
   width: 200px;
 }
 
-.shape-icon {
+#screenboard-interface .shape-icon {
   width: 20px;
   height: 20px;
   color: white;
 }
 
-.toolbar .btn-group button,
-.toolbar .dropdown-menu a {
+#screenboard-interface .toolbar .btn-group button,
+#screenboard-interface .toolbar .dropdown-menu a {
   font-size: 0.8rem;
   padding: 5px 10px;
   margin: 0 2px;
@@ -38,22 +38,22 @@
   transition: background-color 0.2s;
 }
 
-.toolbar .dropdown-menu a {
+#screenboard-interface .toolbar .dropdown-menu a {
   background-color: transparent;
   color: rgb(27, 26, 26);
 }
 
-.toolbar .btn-group button:hover,
-.toolbar .dropdown-menu a:hover {
+#screenboard-interface .toolbar .btn-group button:hover,
+#screenboard-interface .toolbar .dropdown-menu a:hover {
   background-color: #e3e7eb;
 }
 
-.toolbar .btn-group button.active {
+#screenboard-interface .toolbar .btn-group button.active {
   background-color: #454d55;
 }
 
-.toolbarScreen .btn-group button,
-.toolbarScreen .dropdown-menu a {
+#screenboard-interface .toolbarScreen .btn-group button,
+#screenboard-interface .toolbarScreen .dropdown-menu a {
   font-size: 0.8rem;
   padding: 5px 10px;
   margin: 1px 2px;
@@ -63,54 +63,54 @@
   color: "black";
 }
 
-.toolbarScreen .btn-group button {
+#screenboard-interface .toolbarScreen .btn-group button {
   color: rgb(6, 6, 6);
   border: none;
 }
 
-.toolbarScreen .dropdown-menu a {
+#screenboard-interface .toolbarScreen .dropdown-menu a {
   background-color: transparent;
   color: rgb(27, 26, 26);
 }
 
-/* .toolbarScreen .btn-group button:hover,
-  .toolbarScreen .dropdown-menu a:hover {
-    background-color: rgba(214, 209, 209, 0.4);
-    color: black;
-  } */
+/* #screenboard-interface .toolbarScreen .btn-group button:hover,
+#screenboard-interface .toolbarScreen .dropdown-menu a:hover {
+  background-color: rgba(214, 209, 209, 0.4);
+  color: black;
+} */
 
-.toolbarScreen .btn-group button.active {
+#screenboard-interface .toolbarScreen .btn-group button.active {
   background-color: #454d55;
 }
 
-#toolbar,
-#toolbarScreen {
+#screenboard-interface #toolbar,
+#screenboard-interface #toolbarScreen {
   transition: display 0.3s ease-in-out;
 }
 
-#toolbarToggle,
-#toolbarToggleScreen {
+#screenboard-interface #toolbarToggle,
+#screenboard-interface #toolbarToggleScreen {
   cursor: pointer;
   border: "2px solid black" !important;
   font-size: 0.8rem;
 }
 
-#colorPicker,
-#colorPickerScreen {
+#screenboard-interface #colorPicker,
+#screenboard-interface #colorPickerScreen {
   font-size: 0.8rem;
   padding: 2px 2px;
   width: 32px;
   height: 32px;
 }
 
-#lineTypePicker {
+#screenboard-interface #lineTypePicker {
   font-size: 0.8rem;
   padding: 2px auto;
   width: 32px;
   height: 32px;
 }
 
-.btnBoard {
+#screenboard-interface .btnBoard {
   font-size: 1rem;
   padding: 2px 2px;
   width: 40px;
@@ -118,7 +118,7 @@
   margin: 2px;
 }
 
-#lineTypePickerScreen {
+#screenboard-interface #lineTypePickerScreen {
   font-size: 0.7rem;
   padding: 2px auto;
   width: 28px;
@@ -128,18 +128,18 @@
   border-radius: 4px;
 }
 
-.toggle-icon {
+#screenboard-interface .toggle-icon {
   width: 30px;
   height: 30px;
   padding: 0;
   margin: 0;
 }
 
-#toggleBackground.active {
+#screenboard-interface #toggleBackground.active {
   background-color: #fdfeff;
 }
 
-.annotateScreenBtn {
+#screenboard-interface .annotateScreenBtn {
   background-color: #2d2e2f !important;
   border: 2px solid #000 !important;
   color: green !important;
