--- a/src/components/displayComponents/ControlButtonsComponent.css
+++ b/src/components/displayComponents/ControlButtonsComponent.css
@@ -1,31 +1,30 @@
-.container {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    margin-top: 0px;
-  }
-  
-  .buttonContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 8px;
-    border-radius: 5px;
-    margin-right: 4px;
-    font-size: medium;
-    border: none;
-  }
-  
-  .buttonContainer:hover {
-    cursor: pointer;
-  }
-  
-  .verticalButton {
-    flex-direction: column;
-  }
-  
-  .buttonText {
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  
+.mediasfu-container {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  margin-top: 0px;
+}
+
+.mediasfu-container .buttonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  border-radius: 5px;
+  margin-right: 4px;
+  font-size: medium;
+  border: none;
+}
+
+.mediasfu-container .buttonContainer:hover {
+  cursor: pointer;
+}
+
+.mediasfu-container .verticalButton {
+  flex-direction: column;
+}
+
+.mediasfu-container .buttonText {
+  font-size: 12px;
+  margin-top: 5px;
+}
