--- a/src/components/menuComponents/CustomButtons.css
+++ b/src/components/menuComponents/CustomButtons.css
@@ -1,35 +1,34 @@
-.customButtonsContainer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: left;
-  }
-  
-  .customButton {
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: transparent;
-    align-items: left;
-    justify-content: left;
-    border: none;
-  }
-  
-  .buttonContent {
-    display: flex;
-    align-items: left;
-    justify-content: left;
-  }
-  
-  .customButtonIcon {
-    font-size: 20px;
-    color: #000000; /* Default color for the button icon */
-    margin-right: 4px;
-  }
-  
-  .customButtonText {
-    color: #000000; /* Default color for the button text */
-  }
-  
+.mediasfu-customButtonsContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: left;
+}
+
+.mediasfu-customButtonsContainer .customButton {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: transparent;
+  align-items: left;
+  justify-content: left;
+  border: none;
+}
+
+.mediasfu-customButtonsContainer .buttonContent {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+}
+
+.mediasfu-customButtonsContainer .customButtonIcon {
+  font-size: 20px;
+  color: #000000; /* Default color for the button icon */
+  margin-right: 4px;
+}
+
+.mediasfu-customButtonsContainer .customButtonText {
+  color: #000000; /* Default color for the button text */
+}
